--- a/app/views/admin/scrapings/show.html.erb
+++ b/app/views/admin/scrapings/show.html.erb
@@ -1,7 +1,7 @@
 <div class="px-4 sm:px-0" data-controller="scraping-monitor" data-scraping-monitor-scraping-id-value="<%= @scraping.id %>" data-scraping-monitor-status-value="<%= @scraping.status %>">
   
   <div class="mb-8">
-    <%= link_to "← Voltar", admin_igspy_path, class: "text-blue-600 hover:text-blue-800" %>
+    <%= link_to "← Voltarrrr", admin_igspy_path, class: "text-blue-600 hover:text-blue-800" %>
   </div>
 
   <div class="bg-white shadow rounded-lg p-6 mb-6">
